<resources>
    <string name="action_not_now">Не сейчас</string>
    <string name="action_rate">Оценить</string>
    <string name="action_try_again">Повторить</string>

    <string name="text_empty"/>

    <string name="dialog_rate_app_title">Нравится «94% Фильмы»?</string>
    <string name="dialog_rate_app_description">Нажмите на звёзды, чтобы оценить\nигру в Play Market</string>

    <string name="fragment_victory_share_app_description">«%1$s»: 94%% даваемых ответов!\nА вы сможете?\n%2$s</string>
    <string name="fragment_victory_share_app_title">Посоревнуйся с друзьями</string>

    <string name="label_block_ads">Убрать рекламу</string>
    <string name="label_coins_350">350 Монет</string>
    <string name="label_coins_750">750 Монет</string>
    <string name="label_coins_2000">2000 Монет</string>
    <string name="label_coins_4500">4500 Монет</string>
    <string name="label_coins_15000">15000 Монет</string>
    <string name="label_continue">Продолжить</string>
    <string name="label_excellent">Отлично!</string>
    <string name="label_100_coins">100 Монет</string>
    <string name="label_hints">Подсказки</string>
    <string name="label_share">Поделиться</string>
    <string name="label_shop">Магазин</string>
    <string name="label_vk_desc">Сравни свои результаты с друзьями!</string>
    
    <string name="description_free_100_coins">Посмотрите это видео</string>
    <string name="description_best_deal">Лучшее предложение!</string>

    <string name="learn_more">Learn more.</string>
    <string name="dialog_ads_gdpr_title">Personalize Your Ad Experience</string>
    <string name="dialog_ads_gdpr_main_text">%s personalizes your advertising experience using Appodeal. Appodeal and its partners may collect and process personal data such as device identifiers, location data, and other demographic and interest data to provide advertising experience tailored to you. By consenting to this improved ad experience, you`ll see ads that Appodeal and its partners believe are more relevant to you. Learn more.\n\nBy agreeing, you confirm that you are over the age of 16 and would like a personalized ad experience.</string>
    <string name="dialog_ads_gdpr_agree">Yes, I agree</string>
    <string name="dialog_ads_gdpr_disagree"><u>No, thank you</u></string>
    <string name="dialog_ads_gdpr_understand">I understand that I will still see ads, but they may not be as relevant to my interests.</string>
    <string name="dialog_ads_gdpr_result_close">Close window</string>
    <string name="dialog_ads_gdpr_agree_text">Great. We hope you enjoy your personalized ad experience. If you ever change your mind, you can withdraw your consent by enabling "Opt out of Ads Personalization" under Settings/Google/Ads on your Android device and then restarting this app.</string>
    <string name="dialog_ads_gdpr_disagree_text">Appodeal won`t collect your data for personalized advertising in this app. However, if you authorize Appodeal to personalize your advertising experience in a different app, we will collect your data in that other app.</string>


    <string name="tools_error_network_response">Не удалось загрузить данные, проверьте соединение с интернетом</string>

</resources>
