<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue"
        android:paddingBottom="@dimen/padding_16dp"
        android:paddingEnd="@dimen/padding_32dp"
        android:paddingStart="@dimen/padding_32dp"
        android:paddingTop="@dimen/padding_16dp"
        android:scaleType="fitStart"
        android:src="@drawable/appodeal_white_logo"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/sv_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:alpha="0.87"
                android:text="@string/dialog_ads_gdpr_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAdsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.87"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/dialog_ads_gdpr_main_text"
                android:textColor="@android:color/black"
                android:textColorLink="@color/blue" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding_16dp"
                    android:text="@string/dialog_ads_gdpr_agree"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNo"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding_8dp"
                    android:paddingTop="@dimen/padding_8dp"
                    android:text="@string/dialog_ads_gdpr_disagree"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:alpha="0.87"
                    android:gravity="center_horizontal"
                    android:lineSpacingMultiplier="1.4"
                    android:text="@string/dialog_ads_gdpr_understand"
                    android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>