<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvAmountCoins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:drawablePadding="@dimen/padding_4dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_coin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="700"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/blueAccent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgStar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:srcCompat="@drawable/ic_star"
                    app:layout_constraintHeight_percent="0.2"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tvMovieName"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:gravity="center"
                    android:paddingStart="@dimen/padding_8dp"
                    android:paddingEnd="@dimen/padding_8dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_17sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgStar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="Пираты карибского моря"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvVictoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:text="@string/label_excellent"
        android:textColor="@color/blue"
        android:textSize="27sp"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="lollipop"/>

    <TextView
        android:id="@+id/tvVictoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:paddingTop="@dimen/padding_16dp"
        android:paddingBottom="@dimen/padding_16dp"
        android:text="@string/label_vk_desc"
        android:textColor="@color/blue"
        android:textSize="13sp"
        android:gravity="start|center"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintTop_toBottomOf="@+id/tvVictoryTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvShareApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:drawablePadding="@dimen/padding_8dp"
        android:text="@string/label_share"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/tvContinue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVictoryDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:drawableTop="@drawable/ic_share_app" />

    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:drawablePadding="@dimen/padding_8dp"
        android:text="@string/label_continue"
        android:textColor="@color/blue"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvShareApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvShareApp"
        app:layout_constraintTop_toTopOf="@+id/tvShareApp"
        tools:drawableTop="@drawable/ic_arrow_forward" />

</androidx.constraintlayout.widget.ConstraintLayout>